[gd_scene load_steps=9 format=3 uid="uid://daugx6tpaus2c"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1_heb0y"]
[ext_resource type="Script" uid="uid://g5ctypb48c6j" path="res://mods-unpacked/CAP-UploadManager/scenes/windows/window_upload_manager.gd" id="2_rp5cj"]
[ext_resource type="Texture2D" uid="uid://b74154rcth4gd" path="res://mods-unpacked/CAP-UploadManager/textures/icons/double_save.png" id="3_5ynrh"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4_yqgxw"]
[ext_resource type="PackedScene" uid="uid://c3y1yn5gkxfhx" path="res://scenes/ratio_button.tscn" id="5_5ynrh"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5_6r8fx"]
[ext_resource type="AudioStream" uid="uid://cnedscgai8lbp" path="res://audio/sfx/task_completed2.wav" id="6_6phws"]
[ext_resource type="Script" uid="uid://d3m7n5how3k4b" path="res://scripts/node_player_2d.gd" id="7_eg7xe"]

[node name="WindowBase" instance=ExtResource("1_heb0y")]
offset_bottom = 346.0
script = ExtResource("2_rp5cj")
window = "upload_manager"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3_5ynrh")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Upload Manager"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Upload" parent="PanelContainer/MainContainer" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[node name="ResourceContainer" type="HBoxContainer" parent="PanelContainer/MainContainer" index="1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress" type="VBoxContainer" parent="PanelContainer/MainContainer" index="2"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer2" type="HBoxContainer" parent="PanelContainer/MainContainer" index="3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer2" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer2" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress2" type="VBoxContainer" parent="PanelContainer/MainContainer" index="4"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress2" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress2/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress2/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress2" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer3" type="HBoxContainer" parent="PanelContainer/MainContainer" index="5"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer3" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer3" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress3" type="VBoxContainer" parent="PanelContainer/MainContainer" index="6"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress3" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress3/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress3/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress3" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer4" type="HBoxContainer" parent="PanelContainer/MainContainer" index="7"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer4" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer4" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress4" type="VBoxContainer" parent="PanelContainer/MainContainer" index="8"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress4" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress4/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress4/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress4" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer5" type="HBoxContainer" parent="PanelContainer/MainContainer" index="9"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer5" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer5" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress5" type="VBoxContainer" parent="PanelContainer/MainContainer" index="10"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress5" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress5/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress5/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress5" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer6" type="HBoxContainer" parent="PanelContainer/MainContainer" index="11"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer6" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer6" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress6" type="VBoxContainer" parent="PanelContainer/MainContainer" index="12"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress6" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress6/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress6/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress6" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer7" type="HBoxContainer" parent="PanelContainer/MainContainer" index="13"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer7" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer7" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress7" type="VBoxContainer" parent="PanelContainer/MainContainer" index="14"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress7" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress7/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress7/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress7" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer8" type="HBoxContainer" parent="PanelContainer/MainContainer" index="15"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer8" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer8" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress8" type="VBoxContainer" parent="PanelContainer/MainContainer" index="16"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress8" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress8/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress8/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress8" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer9" type="HBoxContainer" parent="PanelContainer/MainContainer" index="17"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer9" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer9" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress9" type="VBoxContainer" parent="PanelContainer/MainContainer" index="18"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress9" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress9/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress9/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress9" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="ResourceContainer10" type="HBoxContainer" parent="PanelContainer/MainContainer" index="19"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="File" parent="PanelContainer/MainContainer/ResourceContainer10" index="0" instance=ExtResource("4_yqgxw")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="RatioButton" parent="PanelContainer/MainContainer/ResourceContainer10" index="1" instance=ExtResource("5_5ynrh")]
layout_mode = 2
max_value = 10.0

[node name="Progress10" type="VBoxContainer" parent="PanelContainer/MainContainer" index="20"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress10" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress10/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress10/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress10" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="Result" parent="PanelContainer/MainContainer" index="21" instance=ExtResource("5_6r8fx")]
layout_mode = 2

[node name="Infections" parent="PanelContainer/MainContainer" index="22" instance=ExtResource("5_6r8fx")]
layout_mode = 2
default_resource = "infected_computer"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource("6_6phws")
max_distance = 1200.0
max_polyphony = 5
bus = &"Window SFX"
script = ExtResource("7_eg7xe")

[connection signal="connection_in_set" from="PanelContainer/MainContainer/Upload" to="." method="_on_upload_connection_set"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer/File" to="." method="_on_file_resource_set_index" binds= [0]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer2/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer2/File" to="." method="_on_file_resource_set_index" binds= [1]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer2/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer3/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer3/File" to="." method="_on_file_resource_set_index" binds= [2]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer3/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer4/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer4/File" to="." method="_on_file_resource_set_index" binds= [3]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer4/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer5/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer5/File" to="." method="_on_file_resource_set_index" binds= [4]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer5/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer6/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer6/File" to="." method="_on_file_resource_set_index" binds= [5]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer6/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer7/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer7/File" to="." method="_on_file_resource_set_index" binds= [6]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer7/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer8/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer8/File" to="." method="_on_file_resource_set_index" binds= [7]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer8/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer9/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer9/File" to="." method="_on_file_resource_set_index" binds= [8]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer9/RatioButton" to="." method="_on_ratio_change"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/ResourceContainer10/File" to="." method="_on_file_connection_in_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/ResourceContainer10/File" to="." method="_on_file_resource_set_index" binds= [9]]
[connection signal="changed" from="PanelContainer/MainContainer/ResourceContainer10/RatioButton" to="." method="_on_ratio_change"]
